tests/invalid/Return_Invalid_10.whiley
function f() -> void:
    return 1
